navigation and hero section added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Assignment in PH</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Testing..</h1>
+    <header class="header">
+        <nav class="navbar">
+            <h2 class="nav-text">
+                Sanjida.K
+            </h2>
+            <div class="nav-btn">
+                <button>Download Resume</button>
+            </div>
+        </nav>
+        <div class="hero-section-container">
+            <div class="hero-section-content">
+                <img src="assets/Group.png" alt="">
+                <h1>"In the near future, I hope to become a Developer."</h1>
+                <p>Passionate about technology and innovation, I am dedicated to honing my skills and embracing new challenges.</p>
+                <button>Contact with me</button>
+            </div>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
