second section added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,47 @@
         </div>
     </header>
     <main>
-
+        <div class="learning-section-container">
+            <div class="learning-section-content">
+                <div class="top-section">
+                    <h2>Why Web Development??</h2>
+                    <p>Web development is an ever-evolving field that offers boundless opportunities for creativity and innovation.</p>
+                </div>
+                <div class="outer-div">
+                    <div class="reason">
+                        <div class="reason-content">
+                            <div class="reason-text">
+                                <h2>I will Do Coding and Change The World</h2>
+                                <p>I will harness coding to drive positive change and transform the world.</p>
+                                <button>Learn More</button>
+                            </div>
+                            <img id="img-1" src="assets/Layer_1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="reason" id="middle-content">
+                        <div class="reason-content">
+                            <img id="img-2" src="assets/Layer_2.png" alt="">
+                            <div class="reason-text">
+                                <h2>I will help People by creating Modern Web System</h2>
+                                <p>Creating modern web systems to help people and improve their digital experiences.</p>
+                                <button>Learn More</button>
+                            </div>
+    
+                        </div>
+                    </div>
+                    <div class="reason">
+                        <div class="reason-content">
+                            <div class="reason-text">
+                                <h2>I will Do Coding and Change The World</h2>
+                                <p>Using coding to drive innovation and create a positive global impact.</p>
+                                <button>Learn More</button>
+                            </div>
+                            <img id="img-3" src="assets/Layer_3.png" alt="">
+                        </div>
+                </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
