footer section added

--- a/index.html
+++ b/index.html
@@ -68,8 +68,15 @@
             </div>
         </div>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <div class="footer-content">
+            <h4>An Open Commitment by Sanjida Khanam</h4>
+            <div class="icon-container">
+                <img src="assets/facebook.png" alt="">
+                <img src="assets/github.png" alt="">
+                <img src="assets/linkedin-icon 1.png" alt="">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
