footer section updated-2

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="assets/Group.png" alt="">
                 <h1>"In the near future, I hope to become a Developer."</h1>
                 <p>Passionate about technology and innovation, I am dedicated to honing my skills and embracing new challenges.</p>
-                <button>Contact with me</button>
+                <button><a href="#footer"></a>Contact with me</button>
             </div>
         </div>
     </header>
@@ -68,7 +68,7 @@
             </div>
         </div>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="footer">
         <div class="footer-content">
             <h4>An Open Commitment by Sanjida Khanam</h4>
             <div class="icon-container">
