inspiration section done

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </header>
     <main>
-        <div class="learning-section-container">
+        <section class="learning-section-container">
             <div class="learning-section-content">
                 <div class="top-section">
                     <h2>Why Web Development??</h2>
@@ -66,7 +66,17 @@
                 </div>
                 </div>
             </div>
-        </div>
+        </section>
+        <section class="inspiration-section-container">
+            <div class="inspiration-section-text">
+                <h1>My Inspiration</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <div class="inspiration-section-video">
+                <iframe
+                src="https://www.youtube.com/embed/DGHn2uOAVCE?si=E2vGlVZxsR-iAMls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </section>
     </main>
     <footer class="footer" id="footer">
         <div class="footer-content">
