current target section added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Assignment in PH</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="header">
         <nav class="navbar">
@@ -20,7 +22,8 @@
             <div class="hero-section-content">
                 <img src="assets/Group.png" alt="">
                 <h1>"In the near future, I hope to become a Developer."</h1>
-                <p>Passionate about technology and innovation, I am dedicated to honing my skills and embracing new challenges.</p>
+                <p>Passionate about technology and innovation, I am dedicated to honing my skills and embracing new
+                    challenges.</p>
                 <button><a href="#footer"></a>Contact with me</button>
             </div>
         </div>
@@ -30,7 +33,8 @@
             <div class="learning-section-content">
                 <div class="top-section">
                     <h2>Why Web Development??</h2>
-                    <p>Web development is an ever-evolving field that offers boundless opportunities for creativity and innovation.</p>
+                    <p>Web development is an ever-evolving field that offers boundless opportunities for creativity and
+                        innovation.</p>
                 </div>
                 <div class="outer-div">
                     <div class="reason">
@@ -51,7 +55,7 @@
                                 <p>Creating modern web systems to help people and improve their digital experiences.</p>
                                 <button>Learn More</button>
                             </div>
-    
+
                         </div>
                     </div>
                     <div class="reason">
@@ -63,19 +67,49 @@
                             </div>
                             <img id="img-3" src="assets/Layer_3.png" alt="">
                         </div>
-                </div>
+                    </div>
                 </div>
             </div>
         </section>
         <section class="inspiration-section-container">
             <div class="inspiration-section-text">
                 <h1>My Inspiration</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text.</p>
             </div>
             <div class="inspiration-section-video">
-                <iframe
-                src="https://www.youtube.com/embed/DGHn2uOAVCE?si=E2vGlVZxsR-iAMls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/DGHn2uOAVCE?si=E2vGlVZxsR-iAMls" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
+        </section>
+        <section class="current-target-section">
+            <div class="inspiration-section-text" id="target-section-text">
+                <h1>My Current Target</h1>
+                <p>I am currently focused on becoming proficient in front-end development. This includes learning essential technologies like HTML, CSS, and JavaScript, along with frameworks and libraries.</p>
+            </div>
+            <div class="language-section">
+                <div class="language-section-content">
+                    <img src="assets/html.png" alt="">
+                    <h2>HTML</h2>
+                    <p>HTML is the standard markup language for Web pages.</p>
+                    <a href="https://www.w3schools.com/html/" target="_blank">Learn More</a>
+                </div>
+                <div class="language-section-content">
+                    <img src="assets/css.png" alt="">
+                    <h2>CSS</h2>
+                    <p>CSS is the language we use to style an HTML document.</p>
+                    <a href="https://www.w3schools.com/css/" target="_blank">Learn More</a>
+                </div>
+                <div class="language-section-content">
+                    <img src="assets/js.png" alt="">
+                    <h2>JavaScript</h2>
+                    <p>JavaScript is a scripting language used to develop web pages.</p>
+                    <a href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
+                </div>
+            </div>
+
         </section>
     </main>
     <footer class="footer" id="footer">
@@ -89,4 +123,5 @@
         </div>
     </footer>
 </body>
+
 </html>
