support section added

--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
                 <p>I am currently focused on becoming proficient in front-end development. This includes learning essential technologies like HTML, CSS, and JavaScript, along with frameworks and libraries.</p>
             </div>
             <div class="language-section">
-                <div class="language-section-content">
+                <div class="language-section-content" id="html-section">
                     <img src="assets/html.png" alt="">
                     <h2>HTML</h2>
                     <p>HTML is the standard markup language for Web pages.</p>
                     <a href="https://www.w3schools.com/html/" target="_blank">Learn More</a>
                 </div>
-                <div class="language-section-content">
+                <div class="language-section-content" id="css-section">
                     <img src="assets/css.png" alt="">
                     <h2>CSS</h2>
                     <p>CSS is the language we use to style an HTML document.</p>
                     <a href="https://www.w3schools.com/css/" target="_blank">Learn More</a>
                 </div>
-                <div class="language-section-content">
+                <div class="language-section-content" id="js-section">
                     <img src="assets/js.png" alt="">
                     <h2>JavaScript</h2>
                     <p>JavaScript is a scripting language used to develop web pages.</p>
@@ -111,14 +111,22 @@
             </div>
 
         </section>
+        <section class="support">
+            <h1>I need Support</h1>
+            <p>Your support make me more strong and give me inspiration to do better.</p>
+            <div class="support-msg">
+                <input type="text" placeholder="Suggest any feedback for me">
+                <input type="submit" value="Submit">
+            </div>
+        </section>
     </main>
     <footer class="footer" id="footer">
         <div class="footer-content">
             <h4>An Open Commitment by Sanjida Khanam</h4>
             <div class="icon-container">
-                <img src="assets/facebook.png" alt="">
-                <img src="assets/github.png" alt="">
-                <img src="assets/linkedin-icon 1.png" alt="">
+                <a href="https://www.w3schools.com/css/" target="_blank"><img src="assets/facebook.png" alt=""></a>
+                <a href="https://www.w3schools.com/css/" target="_blank"><img src="assets/github.png" alt=""></a>
+                <a href="https://www.w3schools.com/css/" target="_blank"><img src="assets/linkedin-icon 1.png" alt=""></a> 
             </div>
         </div>
     </footer>
