next target section added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <div class="reason-text">
                                 <h2>I will Do Coding and Change The World</h2>
                                 <p>I will harness coding to drive positive change and transform the world.</p>
-                                <button>Learn More</button>
+                                <a href="https://en.wikipedia.org/wiki/Web_development" target="_blank"><button>Learn More</button></a> 
                             </div>
                             <img id="img-1" src="assets/Layer_1.png" alt="">
                         </div>
@@ -53,7 +53,7 @@
                             <div class="reason-text">
                                 <h2>I will help People by creating Modern Web System</h2>
                                 <p>Creating modern web systems to help people and improve their digital experiences.</p>
-                                <button>Learn More</button>
+                                <a href="https://en.wikipedia.org/wiki/Web_development" target="_blank"><button>Learn More</button></a> 
                             </div>
 
                         </div>
@@ -63,7 +63,7 @@
                             <div class="reason-text">
                                 <h2>I will Do Coding and Change The World</h2>
                                 <p>Using coding to drive innovation and create a positive global impact.</p>
-                                <button>Learn More</button>
+                                <a href="https://en.wikipedia.org/wiki/Web_development" target="_blank"><button>Learn More</button></a> 
                             </div>
                             <img id="img-3" src="assets/Layer_3.png" alt="">
                         </div>
@@ -74,8 +74,7 @@
         <section class="inspiration-section-container">
             <div class="inspiration-section-text">
                 <h1>My Inspiration</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text.</p>
+                <p>I am directly motivated by Programming Hero. The encouragement and support from Programming Hero is keeping me focused on achieving my goals.</p>
             </div>
             <div class="inspiration-section-video">
                 <iframe src="https://www.youtube.com/embed/DGHn2uOAVCE?si=E2vGlVZxsR-iAMls" title="YouTube video player"
@@ -110,6 +109,38 @@
                 </div>
             </div>
 
+        </section>
+        <section class="next-target-section">
+            <div class="inspiration-section-text" id="target-section-text">
+                <h1>My Next Target</h1>
+                <p>I aim to become a full-stack developer capable of building robust, scalable web applications.</p>
+            </div>
+            <div class="libraries">
+                <div class="library-content">
+                    <img src="assets/react.png" alt="">
+                    <div class="library-text">
+                        <h2>ReactJS</h2>
+                        <p>ReactJS, also known as React, is a popular JavaScript library for building user interfaces. It is also referred to as a front-end JavaScript library.</p>
+                        <a href="https://www.w3schools.com/react/" target="_blank">Learn More</a>
+                    </div>
+                </div>
+                <div class="library-content">
+                    <img src="assets/nodejs.png" alt="">
+                    <div class="library-text">
+                        <h2>NodeJs</h2>
+                        <p>Node. js is a cross-platform, open-source, back-end JavaScript runtime environment, that executes JavaScript code outside a web browser.</p>
+                        <a href="https://www.w3schools.com/nodejs/default.asp" target="_blank">Learn More</a>
+                    </div>
+                </div>
+                <div class="library-content">
+                    <img src="assets/mongodb.png" alt="">
+                    <div class="library-text">
+                        <h2>MongoDB</h2>
+                        <p>MongoDB is a non-relational document database that provides support for JSON-like storage.</p>
+                        <a href="https://www.w3schools.com/mongodb/index.php" target="_blank">Learn More</a>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="support">
             <h1>I need Support</h1>
