challenging part  added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1>"In the near future, I hope to become a Developer."</h1>
                 <p>Passionate about technology and innovation, I am dedicated to honing my skills and embracing new
                     challenges.</p>
-                <button><a href="#footer"></a>Contact with me</button>
+                <a href="#footer"><button>Contact with me</button></a>
             </div>
         </div>
     </header>
@@ -147,7 +147,7 @@
             <p>Your support make me more strong and give me inspiration to do better.</p>
             <div class="support-msg">
                 <input type="text" placeholder="Suggest any feedback for me">
-                <input type="submit" value="Submit">
+                <a href=""><input type="submit" value="Submit"></a>
             </div>
         </section>
     </main>
@@ -155,9 +155,9 @@
         <div class="footer-content">
             <h4>An Open Commitment by Sanjida Khanam</h4>
             <div class="icon-container">
-                <a href="https://www.w3schools.com/css/" target="_blank"><img src="assets/facebook.png" alt=""></a>
-                <a href="https://www.w3schools.com/css/" target="_blank"><img src="assets/github.png" alt=""></a>
-                <a href="https://www.w3schools.com/css/" target="_blank"><img src="assets/linkedin-icon 1.png" alt=""></a> 
+                <a href="https://www.facebook.com/profile.php?id=100034140082279" target="_blank"><img src="assets/facebook.png" alt=""></a>
+                <a href="https://github.com/Sanjida-Khanam778" target="_blank"><img src="assets/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/sanjida-khanam-ice/" target="_blank"><img src="assets/linkedin-icon 1.png" alt=""></a> 
             </div>
         </div>
     </footer>
